# guindaste_gui

./: .gitignore  Coppelia_tutorial_v04.ttt  CraneExample.ttt  README.md  crane.kv  main.py  pyproject.toml  requirements.txt  run.py  test_bluetooth.py
Interface/: CraneInterface.py
Interface/Coppelia/: CoppeliaSimulation.py  CraneSimulation.py
Modules/: CraneInterface.py  __init__.py
Modules/Coppelia/: CoppeliaSimulation.py  CraneSimulation.py
Modules/CraneOperation/: CraneCreator.py  CraneInterface.py  __init__.py
Modules/CraneOperation/Arduino/: CranePhysical.py
Modules/CraneOperation/Coppelia/: CoppeliaSimulation.py  CraneSimulation.py
Modules/GuiInterface/: GuiAdapter.py
Modules/MathematicTransformations/: ArduinoTransformations.py  CoppeliaTransformations.py  ThreadRepeaterAuxiliar.py  __init__.py
