[tool.poetry]
name = "guindaste_gui_env"
version = "0.1.0"
description = ""
authors = ["Matheus Brito Faria <matheus.brito000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
docutils = "0.18.1"
idna = "3.3"
Kivy = "2.1.0"
Kivy-Garden = "0.1.5"
Pygments = "2.11.2"
requests = "2.27.1"
urllib3 = "1.26.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
